# mythos

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .npmrc  .vercelignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  release-please-config.json  renovate.json  squirrel.toml  turbo.json  vercel.json  verify_images.js  vitest-setup.ts
.claude/: settings.local.json
.codacy/: codacy.yaml
.github/: dependabot.yml
.github/workflows/: ally-a11y.yml  (+5 more)
.history/: .gitignore_20260127203534  ARCHITECTURE_20260203193447.md  PRE_PUSH_AUDIT_20260127203631.md  README_20260127203536.md  README_20260127203546.md  README_20260127203712.md  README_20260203184110.md  README_20260203184120.md  README_20260203193334.md  package_20260127203924.json  vercel_20260127204142.json  vercel_20260203174751.json
apps/api/: Cargo.toml  package.json
apps/api/migrations/: 20250101000000_create_extensions_and_enums.sql  20250101000001_create_tables.sql  20250101000002_create_views.sql  20250101000003_create_functions_and_triggers.sql
apps/api/seeds/: 001_greek_mythology.sql  002_norse_mythology.sql  003_egyptian_mythology.sql
apps/api/src/: main.rs
apps/api/src/db/: pool.rs
apps/api/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
apps/api/src/models/: deity.rs  enums.rs  event.rs  location.rs  mod.rs  pantheon.rs  relationship.rs  story.rs
scripts/: audit_images.py  audit_images2.py  audit_mismatches.py  generate_missing.py  move_and_update.py  test_all_features.py
(+495 files in other folders)
